# tritonBLAS

./: .gitignore  README.md  REFACTORING_COMPLETE.md  TESTING_REPORT.md  arch.diff  pyproject.toml  setup.py
.github/: copilot-instructions.md
benchmarks/: analyze_mall.py  analyze_per_dispatch.py  att.yaml  autoresearch.py  autoresearch_final_overlap.py  autoresearch_kloop.py  autoresearch_kloop_v2.py  autoresearch_kloop_v3.py  autoresearch_kloop_v4.py  autoresearch_overlap.py  autoresearch_overlap_split.py  autoresearch_phase5.py  autoresearch_phase5b.py  autoresearch_phase5c.py  autoresearch_phase6.py  autoresearch_phase6b.py  autoresearch_phase6c.py  autoresearch_phase7_ksplit.py  autoresearch_validate.py  autoresearch_validate_v2.py  bench_matmul.py  benchmark_autotuning.py  benchmark_work_stealing.py  collect_all_data.py  collect_all_plot_data.py  collect_counters.py  collect_counters_v2.py  collect_final.py  collect_overlap_v2.py  collect_plot_data.py  collect_torch_sk_multisize.py  common.py  cu_sweep.py  cu_sweep_all.sh  cu_sweep_driver.py  cu_sweep_global_atomic.py  cu_sweep_hierarchical.py  cu_sweep_sk_static.py  cu_sweep_skws_gridlimited.py  cu_sweep_skws_only.py  (+48 more)
cmake/: hip-config.cmake
datasets/: bench_8k.yaml  generate_grid.py  generate_grid_fp4.py  matmul_test_fp8.yaml
df-counters/: Dockerfile  ptl-disable.patch  remove.sh  zbuild.sh
docker/: Dockerfile  Dockerfile.df-counters  build.sh  program.md  run.sh
docs/: CONTRIBUTING.md  CONTRIBUTORS.md  README.md  Work Stealing-based GEMM on AMD GPUs.pptx  build_docs.sh  conf.py  index.md  (+5 more)
(+250 files in other folders)
